--- a/senac-front/src/app/components/layout/login/login.component.html
+++ b/senac-front/src/app/components/layout/login/login.component.html
@@ -1,2 +1,37 @@
 
 <p>ESTA FUNCIONANDO</p>
+
+<div class="container">
+    <div class="row">
+        <div class="col-4">
+            
+        </div>
+        <div class="col-4">
+
+            <div class="card">
+                <div class="card-body">
+                    <h2>Autentique-se:</h2>
+
+                    <mdb-form-control>
+                        <input [(ngModel)]="login.username" mdbInput type="text" id="login" class="form-control" />
+                        <label mdbLabel class="form-label" for="login">DESEMPREGADO OU PATRAO FDP:</label>
+                      </mdb-form-control>
+                    <br>    
+                    <mdb-form-control>
+                        <input (keyup.enter)="logar()" [(ngModel)]="login.password" mdbInput type="text" id="senha" class="form-control" />
+                        <label mdbLabel class="form-label" for="senha">Password:</label>
+                      </mdb-form-control>
+                    <br>  
+
+                    <button (click)="logar()" type="button" class="btn btn-primary" mdbRipple>LOGAR NESSE CARALHO</button>
+
+                </div>
+              </div>
+
+              
+        </div>
+        <div class="col-4">
+            
+        </div>
+    </div>
+</div>
