--- a/senac-front/src/app/components/vagas/vagas-list/vagas-list.component.html
+++ b/senac-front/src/app/components/vagas/vagas-list/vagas-list.component.html
@@ -1,1 +1,59 @@
-<p>vagas-list works!!!!!!!!!!!!!!!!!!!!!!!!!!!!</p>
+
+
+<div class="container">
+  <div class="row">
+      <div class="col-4">
+        <form class="d-flex input-group w-auto">
+          <input
+            type="search"
+            class="form-control rounded"
+            placeholder="Busque por vaga, salario ou cidade"
+            aria-label="Search"
+            aria-describedby="search-addon"
+          />
+          <span class="input-group-text text-white border-0" id="search-addon">
+            <i class="fas fa-search"></i>
+          </span>
+        </form>
+      </div>
+      
+      <div class="col-4">
+        <div class="card">
+          <!-- adicionar a opção de por a imagem depois, foco em mostrar o titulo e desc primeiro -->
+          <!-- <img src="" class="card-img-top" alt="Fissure in Sandstone"/> -->
+          <div class="card-body">
+            <thead>
+              <tr>
+                  <th scope="col">Titulo</th>
+                  <th scope="col">Descrição</th>
+              </tr>
+              </thead>
+
+              <tbody>
+                @for (vagas of lista; track $index) {
+                    <tr>
+                        <td>{{vagas.titulo}}</td>
+                        <td>{{vagas.descricao}}</td>
+              
+                        <td class="alinharADireita">
+                           
+                        </td>
+                    </tr>
+                    }
+               
+                </tbody>
+            <a href="#!" class="btn btn-primary">Apertar o botão</a>
+          </div>
+        </div>
+        
+       
+      <div class="col-4">
+        
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+ 
