arrumando o menu e deixand o esqueleto do vagas

--- a/senac-front/src/app/components/layout/menu/menu.component.html
+++ b/senac-front/src/app/components/layout/menu/menu.component.html
@@ -1,1 +1,15 @@
-<p>menu works!</p>
+<!-- Image and text -->
+<nav class="navbar navbar-dark bg-primary">
+    <div class="container-fluid">
+ 
+      <a class="navbar-brand" href="/inicio">  
+        <img width="100px" src="https://cdljundiai.com.br/wp-content/uploads/2020/06/senac.png"/>   
+        <small>Inicio</small>
+        <a href="/login">     
+            <small>Sobre nós</small>
+          </a>
+      </a>
+      
+      
+    </div>
+  </nav>
