--- a/senac-front/src/app/components/vagas/vagas-list/vagas-list.component.html
+++ b/senac-front/src/app/components/vagas/vagas-list/vagas-list.component.html
@@ -1,8 +1,12 @@
-
+<div class="col-1"></div>
 
 <div class="container">
   <div class="row">
       <div class="col-4">
+        
+      </div>
+      
+      <div class="col-6">
         <form class="d-flex input-group w-auto">
           <input
             type="search"
@@ -15,6 +19,22 @@
             <i class="fas fa-search"></i>
           </span>
         </form>
+        
+        
+      </div>
+       
+      <div class="col-4">
+        
+      </div>
+    </div>
+</div>
+
+<div class="col-1"></div>
+
+<div class="container">
+  <div class="row">
+      <div class="col-4">
+        
       </div>
       
       <div class="col-4">
@@ -28,9 +48,9 @@
                   <th scope="col">Descrição</th>
               </tr>
               </thead>
-
+        
               <tbody>
-                @for (vagas of lista; track $index) {
+                <!-- @for (vagas of lista; track $index) {
                     <tr>
                         <td>{{vagas.titulo}}</td>
                         <td>{{vagas.descricao}}</td>
@@ -39,20 +59,23 @@
                            
                         </td>
                     </tr>
-                    }
+                    } -->
                
                 </tbody>
-            <a href="#!" class="btn btn-primary">Apertar o botão</a>
+            <a href="https://youtube.com" class="btn btn-primary">Apertar o botão</a>
           </div>
         </div>
         
+      </div>
        
       <div class="col-4">
         
       </div>
     </div>
-  </div>
 </div>
+
+
+
 
 
 
