--- a/senac-front/src/app/components/layout/login/login.component.html
+++ b/senac-front/src/app/components/layout/login/login.component.html
@@ -7,7 +7,7 @@
         <div class="col-4">
 
             <div class="card">
-                <div class="card-body">
+                <div class="card-body border border-dark rounded">
                     <h2>Autentique-se:</h2>
 
                     <mdb-form-control>
@@ -32,4 +32,8 @@
             
         </div>
     </div>
+</div>
+
+<div class="text-center mt-2">
+  <a href="https://youtu.be/ZBFPuCKfp9U">Esqueceu sua senha?</a>
 </div>
