--- a/senac-front/src/app/components/layout/login/login.component.html
+++ b/senac-front/src/app/components/layout/login/login.component.html
@@ -1,4 +1,4 @@
-
+<div class="fundo">
 <div class="container">
     <div class="row">
         <div class="col-4">
@@ -36,4 +36,5 @@
 
 <div class="text-center mt-2">
   <a href="https://youtu.be/ZBFPuCKfp9U">Esqueceu sua senha?</a>
+</div>
 </div>
