--- a/senac-front/src/app/components/layout/menu/menu.component.html
+++ b/senac-front/src/app/components/layout/menu/menu.component.html
@@ -5,9 +5,9 @@
     <!-- Navbar brand -->
     <a class="navbar-brand me-2" href="/inicio">
       <img
-        src="/senac-front/imagens/senac.png"
-        height="32"
-        width="32"
+        src="https://cdljundiai.com.br/wp-content/uploads/2020/06/senac.png"
+        height="50"
+        width="70"
         alt=""
         loading="lazy"
         style="margin-top: -1px;"
