--- a/senac-front/src/app/components/vagas/vagas-form/vagas-form.component.html
+++ b/senac-front/src/app/components/vagas/vagas-form/vagas-form.component.html
@@ -1,1 +1,56 @@
-<p>vagas-form works!</p>
+
+<div class="container">
+    <div class="row">
+      <div class="col-4"></div>
+  
+      <div class="col-4">
+        <div class="card">
+          <div class="card-body centralizar">
+            <h2>Cadastro de Vagas</h2>
+  
+  
+            <form #formulario="ngForm">
+  
+              Nome da Vaga:<br>
+            <input  required [(ngModel)]="vagas.titulo" type="text" class="form-control" name="nome">
+              <br>
+            Descricao:<br>
+            <input   [(ngModel)]="vagas.descricao" type="text" class="form-control" name="cpf">
+              
+              <br />
+              Salario:<br>
+            <input   [(ngModel)]="vagas.salario" type="text" class="form-control" name="email">
+              
+              <br />
+              Requisito:<br>
+              <input   [(ngModel)]="vagas.requisito" type="text" class="form-control" name="especialidade">
+                
+                <br />
+                Setor:<br>
+              <input   [(ngModel)]="vagas.setor" type="text" class="form-control" name="especialidade">
+                
+                <br />
+
+                <br />
+                tipo:<br>
+              <input   [(ngModel)]="vagas.tipo" type="text" class="form-control" name="especialidade">
+                
+                <br />
+                data anucnio:<br>
+                <input   [(ngModel)]="vagas.dataAnuncio" type="text" class="form-control" name="especialidade">
+                  
+                  <br />
+                  nivel experiencia:<br>
+                <input   [(ngModel)]="vagas.nivelExperiencia" type="text" class="form-control" name="especialidade">
+                  
+                  <br />
+              <button (click)="save()"  [disabled]="!formulario.valid" class="btn btn-success">Salvar</button>
+            </form>
+  
+          </div>
+        </div>
+      </div>
+  
+      <div class="col-4"></div>
+    </div>
+  </div>
