--- a/senac-front/src/app/components/layout/menu/menu.component.html
+++ b/senac-front/src/app/components/layout/menu/menu.component.html
@@ -41,17 +41,15 @@
       <!-- Left links -->
 
       <div class="d-flex align-items-center">
-        <button type="button" class="btn btn-link px-3 me-2">
+        <a href="/login" class="btn btn-link px-3 me-2">
           Login
-        </button>
-        <button type="button" class="btn btn-primary me-3">
+        </a>
+        <a href="/login" class="btn btn-primary me-3">
           Cadastro
-        </button>
-        <a
-          class="btn btn-success px-3"
-          href="https://github.com/mdbootstrap/mdb-ui-kit"
-          role="button"
-          ><i class="fas fa-question-circle"></i></a>
+        </a>
+        <a class="btn btn-danger px-3" href="vagas/new" role="button">
+          <i class="fas fa-ice-cream"></i>
+        </a>
       </div>
     </div>
     <!-- Collapsible wrapper -->
