--- a/senac-front/src/app/components/candidatos/candidatos-form/candidatos-form.component.html
+++ b/senac-front/src/app/components/candidatos/candidatos-form/candidatos-form.component.html
@@ -1,1 +1,34 @@
-<p>candidatos-form works!</p>
+<div class="container">
+    <div class="row">
+      <div class="col-4"></div>
+  
+      <div class="col-4">
+        <div class="card">
+          <div class="card-body centralizar">
+            <h2>Cadastro de candidato</h2>
+  
+  
+            <form #formulario="ngForm">
+  
+              Nome:<br>
+            <input  required [(ngModel)]="candidato.nome" type="text" class="form-control" name="nome">
+              <br>
+            Data de Nascimento:<br>
+            <input   [(ngModel)]="candidato.dataNascimento" type="text" class="form-control" name="data">
+              
+              <br />
+              CPF:<br>
+            <input   [(ngModel)]="candidato.cpf" type="text" class="form-control" name="cpf">
+              
+              <br />
+
+              <button (click)="save()"  [disabled]="!formulario.valid" class="btn btn-success">Salvar</button>
+            </form>
+  
+          </div>
+        </div>
+      </div>
+  
+      <div class="col-4"></div>
+    </div>
+  </div>
