--- a/senac-front/src/app/components/empregadores/empregadores-form/empregadores-form.component.html
+++ b/senac-front/src/app/components/empregadores/empregadores-form/empregadores-form.component.html
@@ -1,1 +1,34 @@
-<p>empregadores-form works!</p>
+<div class="container">
+    <div class="row">
+      <div class="col-4"></div>
+  
+      <div class="col-4">
+        <div class="card">
+          <div class="card-body centralizar">
+            <h2>Cadastro de empregador</h2>
+  
+  
+            <form #formulario="ngForm">
+  
+              Nome:<br>
+            <input  required [(ngModel)]="empregador.nome" type="text" class="form-control" name="nome">
+              <br>
+            Razão social:<br>
+            <input   [(ngModel)]="empregador.razaoSocial" type="text" class="form-control" name="razao">
+              
+              <br />
+              CNPJ:<br>
+            <input   [(ngModel)]="empregador.cnpj" type="text" class="form-control" name="cnpj">
+              
+              <br />
+
+              <button (click)="save()"  [disabled]="!formulario.valid" class="btn btn-success">Salvar</button>
+            </form>
+  
+          </div>
+        </div>
+      </div>
+  
+      <div class="col-4"></div>
+    </div>
+  </div>
