--- a/senac-front/src/app/components/candidatos/candidatos-form/candidatos-form.component.html
+++ b/senac-front/src/app/components/candidatos/candidatos-form/candidatos-form.component.html
@@ -14,7 +14,7 @@
             <input  required [(ngModel)]="candidato.nome" type="text" class="form-control" name="nome">
               <br>
             Data de Nascimento:<br>
-            <input   [(ngModel)]="candidato.dataNascimento" type="text" class="form-control" name="data">
+            <input   [(ngModel)]="candidato.dataNascimento" type="date" class="form-control" name="data">
               
               <br />
               CPF:<br>
