--- a/senac-front/src/app/components/candidatos/candidatos-form/candidatos-form.component.html
+++ b/senac-front/src/app/components/candidatos/candidatos-form/candidatos-form.component.html
@@ -19,8 +19,43 @@
               <br />
               CPF:<br>
             <input   [(ngModel)]="candidato.cpf" type="text" class="form-control" name="cpf">
-              
-              <br />
+
+            rua
+              <input   [(ngModel)]="enderecoTemp.rua" type="text" class="form-control" name="rua">
+
+              estado
+              <input   [(ngModel)]="enderecoTemp.estado" type="text" class="form-control" name="estado">
+              cidade
+              <input   [(ngModel)]="enderecoTemp.cidade" type="text" class="form-control" name="cidade">
+              cep
+              <input   [(ngModel)]="enderecoTemp.cep" type="text" class="form-control" name="cep">
+              numero
+              <input   [(ngModel)]="enderecoTemp.numero" type="text" class="form-control" name="numero">
+
+              @if(candidato.id > 0){
+                <button type="button" (click)="incluirEndereco()" class="btn btn-success">Add Ende</button>
+  
+                <table class="table table-striped">
+                  <thead>
+                    <tr>
+                      <td>Rua</td>
+                      <td>Número</td>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    @for (endereco of candidato.enderecos; track $index) {
+                    <tr>
+                      <th>{{endereco.rua}}</th>
+                      <th>{{endereco.numero}}</th>
+                    </tr>
+                    <button (click)="deletarEndereco(endereco)"  [disabled]="!formulario.valid" class="btn btn-danger">deletar</button>
+                    }
+                    
+                  </tbody>
+                  
+                </table>
+              }
+
 
               <button (click)="save()"  [disabled]="!formulario.valid" class="btn btn-success">Salvar</button>
             </form>
