--- a/senac-front/src/app/components/layout/menu/menu.component.html
+++ b/senac-front/src/app/components/layout/menu/menu.component.html
@@ -50,6 +50,12 @@
         <a class="btn btn-danger px-3" href="vagas/new" role="button">
           <i class="fas fa-ice-cream"></i>
         </a>
+        <a class="btn btn-danger px-3" href="candidato/new" role="button">
+          <i class="fas fa-glasses"></i>
+        </a>
+        <a class="btn btn-danger px-3" href="empregador/new" role="button">
+          <i class="fas fa-sun"></i>
+        </a>
       </div>
     </div>
     <!-- Collapsible wrapper -->
