--- a/senac-front/src/app/components/layout/menu/menu.component.html
+++ b/senac-front/src/app/components/layout/menu/menu.component.html
@@ -44,8 +44,11 @@
         <a href="/login" class="btn btn-link px-3 me-2">
           Login
         </a>
-        <a href="/login" class="btn btn-primary me-3">
-          Cadastro
+        <a class="btn btn-primary me-3" href="/empregador">
+          Empregadores
+        </a>
+        <a class="btn btn-primary me-3" href="/empregador">
+          Candidatos
         </a>
         <a class="btn btn-danger px-3" href="vagas/new" role="button">
           <i class="fas fa-ice-cream"></i>
