arrumando pagina candidatos

--- a/senac-front/src/app/components/layout/menu/menu.component.html
+++ b/senac-front/src/app/components/layout/menu/menu.component.html
@@ -47,7 +47,7 @@
         <a class="btn btn-primary me-3" href="/empregador">
           Empregadores
         </a>
-        <a class="btn btn-primary me-3" href="/empregador">
+        <a class="btn btn-primary me-3" href="/candidato">
           Candidatos
         </a>
         <a class="btn btn-danger px-3" href="vagas/new" role="button">
