--- a/senac-front/src/styles.scss
+++ b/senac-front/src/styles.scss
@@ -4,3 +4,13 @@
 
 @import '@fortawesome/fontawesome-free/css/all.css';
 @import 'mdb-angular-ui-kit/assets/scss/mdb.scss';
+
+body{
+    background-image: url(../imagens/fundo2.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    height: 100vh;
+    width: 100%; 
+}
