--- a/senac-front/src/app/components/candidatos/candidatos-form/candidatos-form.component.html
+++ b/senac-front/src/app/components/candidatos/candidatos-form/candidatos-form.component.html
@@ -3,34 +3,38 @@
       <div class="col-4"></div>
   
       <div class="col-4">
-        <div class="card">
+        <div class="card" style="margin-top: 20px;">
           <div class="card-body centralizar">
-            <h2>Cadastro de candidato</h2>
+            <h2>Cadastro de Candidato</h2>
   
   
             <form #formulario="ngForm">
   
-              Nome:<br>
+              Nome:<span style="color: red">*</span><br>
             <input  required [(ngModel)]="candidato.nome" type="text" class="form-control" name="nome">
-              <br>
-            Data de Nascimento:<br>
+            <br />
+            Data de Nascimento:<span style="color: red">*</span><br>
             <input   [(ngModel)]="candidato.dataNascimento" type="date" class="form-control" name="data">
               
               <br />
-              CPF:<br>
+              CPF:<span style="color: red">*</span><br>
             <input   [(ngModel)]="candidato.cpf" type="text" class="form-control" name="cpf">
-
-            rua
+            <br />
+            Rua
               <input   [(ngModel)]="enderecoTemp.rua" type="text" class="form-control" name="rua">
-
-              estado
+              <br />
+              Estado <br>
               <input   [(ngModel)]="enderecoTemp.estado" type="text" class="form-control" name="estado">
-              cidade
+              <br />
+              Cidade <br>
               <input   [(ngModel)]="enderecoTemp.cidade" type="text" class="form-control" name="cidade">
-              cep
+              <br />
+              CEP <br>
               <input   [(ngModel)]="enderecoTemp.cep" type="text" class="form-control" name="cep">
-              numero
+              <br />
+              Numero do Local <br>
               <input   [(ngModel)]="enderecoTemp.numero" type="text" class="form-control" name="numero">
+              <br />
 
               @if(candidato.id > 0){
                 <button type="button" (click)="incluirEndereco()" class="btn btn-success">Add Ende</button>
@@ -57,7 +61,10 @@
               }
 
 
-              <button (click)="save()"  [disabled]="!formulario.valid" class="btn btn-success">Salvar</button>
+              <div class="text-center mt-3">
+                <button (click)="save()" [disabled]="!formulario.valid" class="btn btn-success">Salvar</button>
+              </div>
+              
             </form>
   
           </div>
