--- a/senac-front/src/app/components/empregadores/empregadores-form/empregadores-form.component.html
+++ b/senac-front/src/app/components/empregadores/empregadores-form/empregadores-form.component.html
@@ -3,35 +3,39 @@
       <div class="col-4"></div>
   
       <div class="col-4">
-        <div class="card">
+        <div class="card" style="margin-top: 20px;">
           <div class="card-body centralizar">
             <h2>Cadastro de empregador</h2>
   
   
             <form #formulario="ngForm">
   
-              Nome:<br>
+              Nome:<span style="color: red">*</span><br>
             <input  required [(ngModel)]="empregador.nomeFantasia" type="text" class="form-control" name="nome">
               <br>
-            Razão social:<br>
+            Razão social:<span style="color: red">*</span><br>
             <input   [(ngModel)]="empregador.razaoSocial" type="text" class="form-control" name="razao">
               
               <br />
-              CNPJ:<br>
+              CNPJ:<span style="color: red">*</span><br>
             <input   [(ngModel)]="empregador.cnpj" type="text" class="form-control" name="cnpj">
               
               <br />
-              rua
+              Rua: <br>
               <input   [(ngModel)]="enderecoTemp.rua" type="text" class="form-control" name="rua">
-
-              estado
+              <br />
+              Estado: <br>
               <input   [(ngModel)]="enderecoTemp.estado" type="text" class="form-control" name="estado">
-              cidade
+              <br />
+              Cidade: <br>
               <input   [(ngModel)]="enderecoTemp.cidade" type="text" class="form-control" name="cidade">
-              cep
+              <br />
+              CEP: <br>
               <input   [(ngModel)]="enderecoTemp.cep" type="text" class="form-control" name="cep">
-              numero
+              <br />
+              Numero do Local: <br>
               <input   [(ngModel)]="enderecoTemp.numero" type="text" class="form-control" name="numero">
+              <br />
               
               @if(empregador.id > 0){
                 <button type="button" (click)="incluirEndereco()" class="btn btn-success">Add Ende</button>
@@ -57,7 +61,10 @@
                 </table>
               }
 
-              <button (click)="save()"  [disabled]="!formulario.valid" class="btn btn-success">Salvar</button>
+              <div class="text-center mt-3">
+                <button (click)="save()" [disabled]="!formulario.valid" class="btn btn-success">Salvar</button>
+              </div>
+              
             </form>
   
           </div>
