--- a/senac-front/src/app/components/vagas/vagas-form/vagas-form.component.html
+++ b/senac-front/src/app/components/vagas/vagas-form/vagas-form.component.html
@@ -4,25 +4,25 @@
       <div class="col-4"></div>
   
       <div class="col-4">
-        <div class="card">
+        <div class="card" style="margin-top: 20px;">
           <div class="card-body centralizar">
             <h2>Cadastro de Vagas</h2>
   
   
             <form #formulario="ngForm">
   
-              Nome da Vaga:<br>
+              Titulo da Vaga:<span style="color: red">*</span><br>
             <input  required [(ngModel)]="vagas.titulo" type="text" class="form-control" name="nome">
               <br>
-            Descricao:<br>
+            Descricao:<span style="color: red">*</span><br>
             <input   [(ngModel)]="vagas.descricao" type="text" class="form-control" name="cpf">
               
               <br />
-              Salario:<br>
+              Salario:<span style="color: red">*</span><br>
             <input   [(ngModel)]="vagas.salario" type="text" class="form-control" name="email">
               
               <br />
-              Requisito:<br>
+              Requisito:<span style="color: red">*</span><br>
               <input   [(ngModel)]="vagas.requisito" type="text" class="form-control" name="especialidade">
                 
                 <br />
@@ -30,21 +30,22 @@
               <input   [(ngModel)]="vagas.setor" type="text" class="form-control" name="especialidade">
                 
                 <br />
-
-                <br />
-                tipo:<br>
+                Tipo:<br>
               <input   [(ngModel)]="vagas.tipo" type="text" class="form-control" name="especialidade">
                 
                 <br />
-                data anucnio:<br>
+                Data anuncio:<span style="color: red">*</span><br>
                 <input   [(ngModel)]="vagas.dataAnuncio" type="text" class="form-control" name="especialidade">
                   
                   <br />
-                  nivel experiencia:<br>
+                  Nivel Experiencia:<br>
                 <input   [(ngModel)]="vagas.nivelExperiencia" type="text" class="form-control" name="especialidade">
                   
                   <br />
-              <button (click)="save()"  [disabled]="!formulario.valid" class="btn btn-success">Salvar</button>
+                  <div class="text-center mt-3">
+                    <button (click)="save()" [disabled]="!formulario.valid" class="btn btn-success">Salvar</button>
+                  </div>
+                  
             </form>
   
           </div>
