--- a/senac-front/src/app/components/layout/menu/menu.component.html
+++ b/senac-front/src/app/components/layout/menu/menu.component.html
@@ -3,7 +3,7 @@
   <!-- Container wrapper -->
   <div class="container">
     <!-- Navbar brand -->
-    <a class="navbar-brand me-2" href="/inicio">
+    <a class="navbar-brand me-2" href="/vagas">
       <img
         src="https://cdljundiai.com.br/wp-content/uploads/2020/06/senac.png"
         height="50"
@@ -35,7 +35,7 @@
       <!-- Left links -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#">Inicio</a>
+          <a class="nav-link" href="/vagas">Inicio</a>
         </li>
       </ul>
       <!-- Left links -->
@@ -50,10 +50,10 @@
         <a class="btn btn-primary me-3" href="/candidato">
           Candidatos
         </a>
-        <a class="btn btn-danger px-3" href="vagas/new" role="button">
+        <a class="btn btn-danger px-3" href="vagas/new" role="button" style="margin-right: 10px;">
           <i class="fas fa-ice-cream"></i>
         </a>
-        <a class="btn btn-danger px-3" href="candidato/new" role="button">
+        <a class="btn btn-danger px-3" href="candidato/new" role="button" style="margin-right: 10px;">
           <i class="fas fa-glasses"></i>
         </a>
         <a class="btn btn-danger px-3" href="empregador/new" role="button">
