ajuste na barra

--- a/senac-front/src/app/components/empregadores/empregadores-list/empregadores-list.component.html
+++ b/senac-front/src/app/components/empregadores/empregadores-list/empregadores-list.component.html
@@ -8,7 +8,7 @@
                   <input
                     type="search"
                     class="form-control rounded"
-                    placeholder="Busque por vaga, salario ou setor"
+                    placeholder="Busque por Nome Fantasia"
                     name="termo"
                     [(ngModel)]="termoBusca"
                   />
