arrumando o buscar cnpj

--- a/senac-front/src/app/components/vagas/vagas-form/vagas-form.component.html
+++ b/senac-front/src/app/components/vagas/vagas-form/vagas-form.component.html
@@ -35,7 +35,7 @@
                 
                 <br />
                 Data anuncio:<span style="color: red">*</span><br>
-                <input   [(ngModel)]="vagas.dataAnuncio" type="text" class="form-control" name="especialidade">
+                <input   [(ngModel)]="vagas.dataAnuncio" type="date" class="form-control" name="especialidade">
                   
                   <br />
                   Nivel Experiencia:<br>
