--- a/senac-front/src/app/components/vagas/vagas-list/vagas-list.component.html
+++ b/senac-front/src/app/components/vagas/vagas-list/vagas-list.component.html
@@ -39,7 +39,7 @@
         
       </div>
       
-      <div class="col-4">
+      <div class="col-6">
         <div class="alinharADireita" style="margin-left: 250px; margin-top: 40px;">
           <a (click)="new()" class="btn btn-success btn-rounded" mdbRippled>
               <i class="fas fa-plus fa-sm"></i> Novo
@@ -53,14 +53,24 @@
                   <th>Título</th>
                   <th>Descrição</th>
                   <th>Salario is W.I.P</th>
+                  <th>Inscricao</th>
                 </tr>
               </thead>
               <tbody>
                 @for (vaga of lista; track $index){
                 <tr>
-                  <td>{{ vaga.titulo }}</td>
+                  <td>{{ vaga.titulo }}
+                    <br>@for (cand of vaga.candidatos; track $index) {
+                      {{cand.nome}} <br>
+                    }
+                  </td>
                   <td>{{ vaga.descricao }}</td>
                   <!-- <td>{{ vaga.salario }}</td> -->
+                   <td></td>
+                   <td>
+                    <button (click)="inscricao(vaga)" class="btn btn-primary">inscreva-se</button>
+                   </td>
+
                 </tr>
               }
                 @if(lista.length == 0){
