arrumano mais coisa

--- a/senac-front/src/app/components/vagas/vagas-list/vagas-list.component.html
+++ b/senac-front/src/app/components/vagas/vagas-list/vagas-list.component.html
@@ -65,7 +65,7 @@
                     }
                   </td>
                   <td>{{ vaga.descricao }}</td>
-                  <!-- <td>{{ vaga.salario }}</td> -->
+                  <td>{{ vaga.salario }}</td>
                    <td></td>
                    <td>
                     <button (click)="inscricao(vaga)" class="btn btn-primary">inscreva-se</button>
