--- a/senac-front/src/app/components/candidatos/candidatos-form/candidatos-form.component.html
+++ b/senac-front/src/app/components/candidatos/candidatos-form/candidatos-form.component.html
@@ -14,26 +14,26 @@
             <input  required [(ngModel)]="candidato.nome" type="text" class="form-control" name="nome">
             <br />
             Data de Nascimento:<span style="color: red">*</span><br>
-            <input   [(ngModel)]="candidato.dataNascimento" type="date" class="form-control" name="data">
+            <input   required [(ngModel)]="candidato.dataNascimento" type="date" class="form-control" name="data">
               
               <br />
               CPF:<span style="color: red">*</span><br>
-            <input   [(ngModel)]="candidato.cpf" type="text" class="form-control" name="cpf">
+            <input   required pattern="^(\d{3})[\.\s]?(\d{3})[\.\s]?(\d{3})[-\s]?(\d{2})$" [(ngModel)]="candidato.cpf" type="text" class="form-control" name="cpf">
             <br />
             Rua
-              <input   [(ngModel)]="enderecoTemp.rua" type="text" class="form-control" name="rua">
+              <input required [(ngModel)]="enderecoTemp.rua" type="text" class="form-control" name="rua">
               <br />
               Estado <br>
-              <input   [(ngModel)]="enderecoTemp.estado" type="text" class="form-control" name="estado">
+              <input required [(ngModel)]="enderecoTemp.estado" type="text" class="form-control" name="estado">
               <br />
               Cidade <br>
-              <input   [(ngModel)]="enderecoTemp.cidade" type="text" class="form-control" name="cidade">
+              <input  required [(ngModel)]="enderecoTemp.cidade" type="text" class="form-control" name="cidade">
               <br />
               CEP <br>
-              <input   [(ngModel)]="enderecoTemp.cep" type="text" class="form-control" name="cep">
+              <input required [(ngModel)]="enderecoTemp.cep" type="text" class="form-control" name="cep">
               <br />
               Numero do Local <br>
-              <input   [(ngModel)]="enderecoTemp.numero" type="text" class="form-control" name="numero">
+              <input required [(ngModel)]="enderecoTemp.numero" type="text" class="form-control" name="numero">
               <br />
 
               @if(candidato.id > 0){
