arrumando  modal inscritos

--- a/senac-front/src/app/components/vagas/vagas-list/vagas-list.component.html
+++ b/senac-front/src/app/components/vagas/vagas-list/vagas-list.component.html
@@ -116,19 +116,16 @@
       <h5 class="modal-title" id="exampleModalLabel">Inscrição</h5>
       <button type="button" class="btn-close" aria-label="Close" (click)="modalRef.close()"></button>
   </div>
-<div class="modal-body">
-  <div *ngIf="vagaSelecionada" class="modal">
-    <div class="modal-content">
+  <div class="modal-body">
+    @if (vagaSelecionada) {
       <h3>Inscritos na vaga: {{ vagaSelecionada?.titulo }}</h3>
       <ul>
         @for (cand of vagaSelecionada?.candidatos; track $index) {
           <li>{{ cand.nome }}</li>
         }
       </ul>
-      <button (click)="fecharModal()" class="btn btn-secondary">Fechar</button>
-    </div>
+    }
   </div>
-</div>
 
 
 
