--- a/senac-front/src/app/components/layout/login/login.component.html
+++ b/senac-front/src/app/components/layout/login/login.component.html
@@ -12,7 +12,7 @@
 
                     <mdb-form-control>
                         <input [(ngModel)]="login.username" mdbInput type="text" id="login" class="form-control" />
-                        <label mdbLabel class="form-label" for="login">DESEMPREGADO OU PATRAO FDP:</label>
+                        <label mdbLabel class="form-label" for="login">Usuario:</label>
                       </mdb-form-control>
                     <br>    
                     <mdb-form-control>
@@ -21,7 +21,7 @@
                       </mdb-form-control>
                     <br>  
 
-                    <button (click)="logar()" type="button" class="btn btn-primary" mdbRipple>LOGAR NESSE CARALHO</button>
+                    <button (click)="logar()" type="button" class="btn btn-primary" mdbRipple>LOGIN</button>
 
                 </div>
               </div>
